<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="title_activity_compare_two_jobs">CompareTwoJobsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="compare">Compare</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="score">Score</string>

    <string name="job1">Job1</string>
    <string name="job2">Job2</string>

    <string name="compareTableTitleID">Title</string>
    <string name="compareTableCompany">Company</string>
    <string name="compareTableCity">City</string>
    <string name="compareTableState">State</string>
    <string name="compareTableAYS">Annual Yearly Salary</string>
    <string name="compareTableAYB">Annual Yearly Bonus</string>
    <string name="compareTableLT">Leave Time</string>
    <string name="compareTableCSO">Stock Option Shares</string>
    <string name="compareTableHBP">Home Buying Fund</string>
    <string name="compareTableWF">Wellness Fund</string>
    <string name="jobRankReturnToMainID">Return To Main Menu</string>
    <string name="another_comparisonButoonID">Another Comparison</string>
    <string name="compareTableReturnButton">Return To Main Menu</string>
    <string name="compareBtn">Compare</string>
</resources>