<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobRankActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="104dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/compare"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/company"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:paddingTop="38dp"
        android:layout_height="620dp"
        android:scrollbars="vertical"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">
        <TableLayout
            android:id="@+id/jobRanksTableID"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:stretchColumns="*"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/compareBtnID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compareBtn"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/jobRankReturnToMainID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobRankReturnToMainID" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout >