<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Compare2JobsActivity">

    <TableLayout
        android:id="@+id/compareTableID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00838F"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/column1ID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00838F"
                android:gravity="center"
                android:text="@string/job1"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/column2ID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00838F"
                android:gravity="center"
                android:text="@string/job2"
                android:textAlignment="gravity"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableTitleID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableTitleID"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobTitleID_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobTitleID_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableCompanyID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/company"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobCompanyID_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobCompanyID_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableCityID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableCity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobCityID_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobCityID_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableStateID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableState"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobStateID_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobStateID_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableAYSID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableAYS"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobAYSID_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobAYSID_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableAYBID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableAYB"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobAYBID_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobAYBID_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableLTID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableLT"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobLTID_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobLTID_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableCSOID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableCSO"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobCSOID_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobCSOID_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableHBPID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableHBP"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobHBPID_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobHBPID_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/compareTableWFID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#089FC5"
                android:gravity="center"
                android:text="@string/compareTableWF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobWFID_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/JobWFID_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />
        </TableRow>


    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/anotherCompareButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/another_comparisonButoonID" />

            <Button
                android:id="@+id/compareTableReturnToMainID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compareTableReturnButton" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>